@@ -25,6 +25,6 @@
   android:viewportWidth="42"
   xmlns:android="http://schemas.android.com/apk/res/android">
   <path
-    android:fillColor="#ffffff"
+    android:fillColor="#000000"
     android:pathData="M18,25.17 L14.53,21.7c-0.39,-0.39 -1.02,-0.39 -1.41,0 -0.39,0.39 -0.39,1.02 0,1.41l4.18,4.18c0.39,0.39 1.02,0.39 1.41,0L29.29,16.71c0.39,-0.39 0.39,-1.02 0,-1.41 -0.39,-0.39 -1.02,-0.39 -1.41,0z" />
 </vector>
